--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,192 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  background: black;
+  /* font-family: 'Roboto'; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+
+#question {
   color: white;
+  text-align: center;
+  font-size: 28px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  
 }
 
-.App-link {
-  color: #61dafb;
+.selectContainer {
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.select {
+  
+  max-width: 650px;
+  margin: auto;
+}
+
+
+
+.coffeeContainer {
+  margin-top: 100px;
+}
+
+
+
+.cupBodyContainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2%;
+}
+
+.overlay {
+  width: 100%;
+    position: absolute;
+    transform-origin: bottom;
+    display: flex;
+    
+    left: 0px;
+}
+
+.rectangle {
+  width: 200px;
+  height: 140px;
+  border: 2px solid white;
+  border-bottom: 0px;
+  /* margin: auto; */
+  /* margin-top: 100px; */
+  position: relative;
+}
+
+.cupBottom {
+  width: 200px;
+  height: 60px;
+  border: 2px solid white;
+  border-top: 0px;
+  /* background: #724d32; */
+  overflow: hidden;
+  /* margin-left: auto;
+  margin-right: auto; */
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  position: relative;
+}
+
+.handleContainer {
+  width: 65px;
+  height: 110px;
+  border: 2px solid white;
+  display: flex;
+  border-left: 0px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  
+  /* border-bottom: 0px; */
+  /* margin: auto; */
+  margin-top: 70px;
+}
+
+.innerHandle {
+  width: 40px;
+  height: 60px;
+  border: 2px solid white;
+  border-left: 0px;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  /* border-bottom: 0px; */
+  /* margin: auto; */
+  /* margin-top: 100px; */
+}
+
+.drinkText {
+  display: flex;
+  justify-content: center;
+  /* margin: auto; */
+  font-size: 28px;
+  width: 100%;
+  /* left: 43%; */
+  /* min-width: 200px; */
+  transform-origin: bottom;
+  /* top: 10%; */
+  
+  /*
+  Nope =(
+  margin-left: -25%;
+  margin-top: -25%;
+  */
+
+  /* 
+  Yep!
+  */
+  /* transform: translate(-50%, -50%); */
+}
+
+.drinkTextContainer {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  /* border: 2px solid white; */
+}
+
+#createdByContainer {
+  max-width: 800px;
+  margin: auto;
+  font-family: 'Roboto';
+  font-family: 'Trade Winds';
+}
+
+#createdBy {
+  color: white;
+  font-size: 18px;
+  padding-bottom: 20px;
+  margin-top: 50px;
+  
+   
+    /* padding-right: 9%; */
+}
+
+a {
+  color: #00fff8;
+  /* color: #6deecc; */
+  /* text-decoration: none;  */
+}
+
+@media only screen and (max-width: 576px) {
+  #question {
+    font-size: 22px;
   }
-  to {
-    transform: rotate(360deg);
+  .coffeeContainer {
+    margin-top: 45px;
+  }
+
+  .handleContainer {
+    width: 55px;
+  }
+
+  .innerHandle {
+    width: 35px;
+  }
+
+  #createdBy {
+      /* padding-right: 2%; */
+      font-size: 16px;
+      margin: auto;
+      padding-bottom: 90px;
+  }
+
+ 
+
+  .cupBodyContainer {
+    margin-left: 6%;
   }
 }
