--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   background: black;
-  /* font-family: 'Roboto'; */
 }
 
 .appContainer {
@@ -18,8 +17,6 @@ body {
   margin-bottom: 30px;
   padding-left: 10px;
   padding-right: 10px;
-
-  
 }
 
 .selectContainer {
@@ -28,18 +25,13 @@ body {
 }
 
 .select {
-  
   max-width: 650px;
   margin: auto;
 }
 
-
-
 .coffeeContainer {
   margin-top: 100px;
 }
-
-
 
 .cupBodyContainer {
   display: flex;
@@ -49,11 +41,10 @@ body {
 
 .overlay {
   width: 100%;
-    position: absolute;
-    transform-origin: bottom;
-    display: flex;
-    
-    left: 0px;
+  position: absolute;
+  transform-origin: bottom;
+  display: flex;
+  left: 0px;
 }
 
 .rectangle {
@@ -61,8 +52,6 @@ body {
   height: 140px;
   border: 2px solid white;
   border-bottom: 0px;
-  /* margin: auto; */
-  /* margin-top: 100px; */
   position: relative;
 }
 
@@ -71,10 +60,7 @@ body {
   height: 60px;
   border: 2px solid white;
   border-top: 0px;
-  /* background: #724d32; */
   overflow: hidden;
-  /* margin-left: auto;
-  margin-right: auto; */
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
   position: relative;
@@ -88,9 +74,6 @@ body {
   border-left: 0px;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
-  
-  /* border-bottom: 0px; */
-  /* margin: auto; */
   margin-top: 70px;
 }
 
@@ -103,39 +86,20 @@ body {
   margin-bottom: auto;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  /* border-bottom: 0px; */
-  /* margin: auto; */
-  /* margin-top: 100px; */
 }
 
 .drinkText {
   display: flex;
   justify-content: center;
-  /* margin: auto; */
   font-size: 28px;
   width: 100%;
-  /* left: 43%; */
-  /* min-width: 200px; */
   transform-origin: bottom;
-  /* top: 10%; */
-  
-  /*
-  Nope =(
-  margin-left: -25%;
-  margin-top: -25%;
-  */
-
-  /* 
-  Yep!
-  */
-  /* transform: translate(-50%, -50%); */
 }
 
 .drinkTextContainer {
   position: relative;
   width: 100%;
   height: 50px;
-  /* border: 2px solid white; */
 }
 
 #createdByContainer {
@@ -150,15 +114,15 @@ body {
   font-size: 18px;
   padding-bottom: 20px;
   margin-top: 50px;
-  
-   
-    /* padding-right: 9%; */
 }
 
-a {
+#createdBy a {
   color: #00fff8;
-  /* color: #6deecc; */
-  /* text-decoration: none;  */
+  transition: color .3s;
+}
+
+#createdBy a:hover {
+  color: rgba(0, 255, 248, 0.9);
 }
 
 @media only screen and (max-width: 576px) {
@@ -178,13 +142,10 @@ a {
   }
 
   #createdBy {
-      /* padding-right: 2%; */
       font-size: 16px;
       margin: auto;
       padding-bottom: 90px;
   }
-
- 
 
   .cupBodyContainer {
     margin-left: 6%;
